--- a/css/style.css
+++ b/css/style.css
@@ -844,9 +844,9 @@
 	{
 		position: relative;
 		padding: 12em 0em;
-		background: url(../images/banner.jpg) no-repeat center;
+		background: url(../images/bannerUNAD.jpg) no-repeat center;
 		background-size: cover;
-		color: #fff;
+		color: #005883;
 	}
 
 /*********************************************************************************/
@@ -882,13 +882,14 @@
 	
 	#footer .container
 	{
+		
 	}
 
 	#footer h2
 	{
 		padding-bottom: 1.5em;
 		font-size: 1.6em;
-		color: #FFF;
+		color: #005883;
 	}
 
 	#footer strong
@@ -945,7 +946,7 @@
 	
 	#featured .divider
 	{
-		border-bottom: 1px solid #303030;
+		border-bottom: 1px solid #333333;
 	}
 	
 	#featured .box
