--- a/css/style.css
+++ b/css/style.css
@@ -784,6 +784,7 @@
 		#logo a
 		{
 			display: block;
+
 			text-decoration: none;
 			font-size: 2.8em;
 			font-weight: 600;
@@ -802,7 +803,7 @@
 
 		#nav > ul > li
 		{
-			float: left;
+			float: right;
 		}
 		
 			#nav > ul > li:last-child
@@ -814,9 +815,9 @@
 			#nav > ul > li > span
 			{
 				display: block;
-				margin-left: 0.7em;
+				margin-left: 0.5em;
 				padding: 0.80em 1.2em;
-				letter-spacing: 0.06em;
+				letter-spacing: 0.01em;
 				text-decoration: none;
 				text-transform: uppercase;
 				font-size: 1.1em;
