--- a/css/stylecturas.css
+++ b/css/stylecturas.css
@@ -24,7 +24,7 @@ header
 	background: #43C7F4; 
 	margin-top: 0em;
 	margin-bottom: 0em;
-	padding: 0.5em;
+	padding: 0em;
 	padding-bottom: 0em;
 }
 
@@ -54,8 +54,7 @@ h4
 
 ul{
 margin-top: 0.5em;
-text-align: top;
-
+text-align: center;
 }
 
 nav > ul > li 
@@ -66,9 +65,11 @@ nav > ul > li
 	border: #000000 2px solid;
 	text-align: center;
 	margin-right: : 0.4em;
+	margin-top: 0em;
+	margin: 0px 10px 0 auto;
 	padding-top: 0em;
-	float: left;
-	width: 10em;s
+	float: right;
+	width: 12em;s
 	letter-spacing: 0.008em;
 	font-size:0.8em;
 	background:#F0B429;		
@@ -82,7 +83,7 @@ a{
 }
 input:focus
 {
-box-shadow: 0 1px 1px rgba(0,0,0,.4) inset;
+box-shadow: 0 1px 1px rgba(0,0,0,.4) inset;s
 
 }
 
@@ -138,7 +139,22 @@ article{
 	text-align: top;
 	padding:0.5em;
 	margin: 0em auto;
-}		
+}	
+
+form#Volver
+{
+	background: #43C7F4;
+	float: right;
+	margin: 550px 0 0 auto;
+}	
+
+input
+{
+
+background: #50B748;
+color: #FFFFFF;
+border: black 2px solid;
+}
 
 footer{
 	background:	url(images/img01.jpg) repeat;
