Inserción y ajustes lecturas
Se realiza cambios diseño en la página principios de seguridad y se relaciona información de la página seguridad en la internet

--- a/css/stylecturas1.css
+++ b/css/stylecturas1.css
@@ -37,7 +37,7 @@ h1
 	text-shadow: black 6px 6px 4px;
 }	
 
-h2,h3	
+h2,h3,h4	
 {	
 	margin: 0.1em;
 	line-height: 1px;
@@ -47,7 +47,7 @@ h2,h3
 	color: #000000;
 }
 
-h4
+h5
 {
 	color: #000000;
 }
@@ -55,10 +55,9 @@ h4
 ul{
 margin-top: 0.5em;
 text-align: center;
-}
 
-nav > ul > li 
 
+nav > ul > li
 {
 	border-radius: 0.5em;
 	display: block;
@@ -90,10 +89,11 @@ box-shadow: 0 1px 1px rgba(0,0,0,.4) inset;s
 
 section#contenedor
 {
-
+	display: block;
+	justify-content: center;
 	background:  #43C7F4;
 	margin-bottom: 0em;
-	max-width: 2480px;
+	max-width: 2480px;s
 	padding:0em;
 	text-align: center;
 	color: #000000;
@@ -101,19 +101,20 @@ section#contenedor
 
 div#banner
 {
-	padding: 3.3em;
+padding: 3.3em;
 background:	url(images/ECBTI-2.jpg) repeat;
 }
 		
 section#lectura1{
+
 vertical-align: top;
 border: black 2px solid;
 background: #F0B429;
 margin: 1em auto;
-margin-right: 2em;
-height: 455px;
-width: 570px ;
-padding:1em;
+margin-right: 0.5em;
+height: 540px;
+width: 400px ;
+padding:0.5em;
 text-align: left;	
 display: inline-block;	
 color: #000000;	
@@ -123,17 +124,32 @@ color: #000000;
 
 background: #F0B429;
 margin: 1em auto;
-margin-left: 2em;
-height: 455px;
-width: 570px ;
+margin-left: 0.5em;
+margin-right: 0.5em;
+height: 540px;
+width: 600px ;
 border: black 2px solid;
-padding:1em;
+padding:0.5em;
 text-align: left;	
 display: inline-block;	
 color: #000000;
 
 }
-	
+
+section#lectura3{
+
+vertical-align: top;
+border: black 2px solid;
+background: #F0B429;
+margin: 1em auto;
+margin-right: 0.5em;
+height: 540px;
+width: 400px ;
+padding:0.5em;
+text-align: left;	
+display: inline-block;	
+color: #000000;
+}	
 	
 article{
 	font-size:0.7em;
@@ -141,7 +157,6 @@ article{
 	padding:0.5em;
 	margin: 0em auto;
 }	
-
 
 div#return
 {
@@ -154,8 +169,7 @@ form#Volver
 	background: #43C7F4;
 	float: right;
 	
-}
-	
+}	
 
 input
 {
