--- a/css/stylecturas.css
+++ b/css/stylecturas.css
@@ -37,7 +37,7 @@ h1
 	text-shadow: black 6px 6px 4px;
 }	
 
-h2,h3	
+h2,
 {	
 	margin: 0.1em;
 	line-height: 1px;
@@ -47,7 +47,7 @@ h2,h3
 	color: #000000;
 }
 
-h4
+h3
 {
 	color: #000000;
 }
@@ -178,6 +178,5 @@ footer{
 div#creditos
 {
 	background: #FFFFFF;
-	font-size:0.7em;
-		
+	font-size: 0.7em;	
 	}
