--- a/css/stylecturas5.css
+++ b/css/stylecturas5.css
@@ -86,7 +86,7 @@ a{
 }
 input:focus
 {
-box-shadow: 0 1px 1px rgba(0,0,0,.4) inset;s
+box-shadow: 0 1px 1px rgba(0,0,0,.4) inset;
 
 }
 
@@ -114,7 +114,7 @@ border: black 2px solid;
 background: #F0B429;
 margin: 1em auto;
 margin-right: 0.5em;
-height: 540px;
+height: 1000px;
 width: 500px ;
 padding:0.5em;
 text-align: left;	
@@ -129,7 +129,7 @@ background: #F0B429;
 margin: 1em auto;
 margin-left: 0.5em;
 margin-right: 0.5em;
-height: 540px;
+height: 1000px;
 width: 600px ;
 border: black 2px solid;
 padding:0.5em;
@@ -146,7 +146,7 @@ border: black 2px solid;
 background: #F0B429;
 margin: 1em auto;
 margin-right: 0.5em;
-height: 540px;
+height: 1000px;
 width: 400px ;
 padding:0.5em;
 text-align: left;	
