--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -37,25 +37,31 @@
 
 	#page
 	{
-		padding: 2em 0em 6em 0em;
+		padding: 0em 0em 0em 0em;
+		padding-bottom: 0em;
 	}
 	
 	.homepage #page
 	{
-		padding: 6em 0em;
+		padding: 2em 0em;
 	}
 
 	#main
 	{
-		margin-top: 3em;
-		padding-top: 2em;
+		margin-top: 0em;
+		padding-top: 0em;
+		text-align: center;
 		border-top: none;
 	}
 	
 	.homepage #main
 	{
-		margin-top: 6em;
-		padding-top: 6em;
+		margin-top: 0em;
+		padding-top: 0em;
+		padding-left: 10em;
+		text-align: center;
+
+
 	}
 
 /*********************************************************************************/
@@ -64,7 +70,8 @@
 	
 	#footer
 	{
-		padding: 0em 0em 4em 0em;
+		padding: 0em 0em 0em 0em;
+		padding-bottom: 0em;
 	}
 
 /*********************************************************************************/
