--- a/css/stylecturas.css
+++ b/css/stylecturas.css
@@ -69,7 +69,7 @@ nav > ul > li
 	margin: 0px 10px 0 auto;
 	padding-top: 0em;
 	float: right;
-	width: 12em;s
+	width: 12em;
 	letter-spacing: 0.008em;
 	font-size:0.8em;
 	background:#F0B429;		
