--- a/css/style.css
+++ b/css/style.css
@@ -892,12 +892,12 @@
 	{
 		position: relative;
 		padding: 12em 0em;
-		background: url(../images/bannerUNAD.jpg) no-repeat center;
+		background: url(images/bannerUNAD.jpg) no-repeat center;
 		background-size: cover;
 		color: #005883;
 	}
 .banner2 { 
-  background-image: url(../images/bannerUNAD_A.jpg);
+  background-image: url(images/bannerUNAD_A.jpg);
 }
 /*********************************************************************************/
 /* Main                                                                          */
