--- a/css/style.css
+++ b/css/style.css
@@ -892,7 +892,7 @@
  	{
  		position: relative;
  		padding: 12em 0em;
- 		background: url(../images/bannerUNAD.jpg) no-repeat center;
+ 		background: url(images/bannerUNAD.jpg) no-repeat center;
  		background-size: cover;
  		color: #005883;
  	}
